--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="ShoppyGlobe.png" />
+    <link rel="icon" href="ShoppyGlobe.png" type="image/png" />
     <title> ShoppyGlobe </title>
     <script src="https://kit.fontawesome.com/3fe022bc1f.js" crossorigin="anonymous"></script>
   </head>
